# Lambda-calculus-interpreter

./: .clang-tidy  .gitignore  AbstractSyntaxTree.h  CMakeLists.txt  CountOfTerms.h  README.md  TermGenerator.h  TermNode.h  beta-reduction.h  correct-syntax-check.h  main.cpp  new_count_terms.h  new_main.cpp  parse-syntax.h  todo.md
experiment/: call_by_name.csv  call_by_value.csv  experiments_visualise.ipynb  normal_form_ratios.csv  test.cpp
experiment/article/: article_experiments_visualise.ipynb
include/: AbstractSyntaxTree.h  Enums.h  Syntax_functions.h  TermGenerator.h  TermNode.h  TermsLib.h  correct-syntax-check.h
most likely dont need/: beta-reduction.h  correct_syntax_check.h  main.cpp  syntax-correct.h  terms_lib.h
old/: beta-reduction.h  correct_syntax_check.h  terms_lib.h
src/: AbstractSyntaxTree.cpp  TermGenerator.cpp
src_md/: bandicam 2022-07-25 18-57-00-570.gif:Zone.Identifier  bandicam 2022-07-25 18-57-09-864.gif:Zone.Identifier  bandicam 2022-07-25 18-57-22-615.gif:Zone.Identifier  bandicam 2022-07-25 18-58-01-110.gif:Zone.Identifier  bandicam 2022-07-25 19-08-06-687.gif:Zone.Identifier
